@@ -1,5 +1,7 @@
 --------------------------
 Changes in 1.9 (not yet released)
+- stl meshloader now faster, especially with text format
+- CMemoryReadFile::seek no longer allowed to go _before_ start.
 - stl meshloader can now load 32 bit buffers. 
   Thanks @Foaly for the patch (https://irrlicht.sourceforge.io/forum/viewtopic.php?f=9&t=51441)
 - Add IMeshBufffer::clone function to create buffer copies. CMeshManipulator::createMeshCopy uses that now and works now with all types of meshbuffers.
